add reactive client to receive updates